fix: add missing margin to p items in results-div

--- a/styles/style.css
+++ b/styles/style.css
@@ -34,13 +34,13 @@ body {
   color: var(--primary-color);
   font-family: var(--font-stack);
   font-size: var(--font-size);
-  line-height: 1.5;
 }
 
 .container {
   align-items: center;
   display: flex;
   flex-direction: column;
+  margin-bottom: 4rem;
   margin-top: 4rem;
   row-gap: 1.563rem;
 }
@@ -80,7 +80,7 @@ header {
   flex-direction: column;
   margin-bottom: 0.4rem;
   margin-top: 1rem;
-  padding: 0.625rem 0.75rem;
+  padding: 0.625rem 0.40rem;
   row-gap: 1.125rem;
   width: 100%;
 }
@@ -91,17 +91,26 @@ header {
   padding-bottom: 0.625rem;
   padding-top: 0.625rem;
   text-align: center;
-  width: 100%;
+  width: 95%;
 }
 
 #results-div {
   color: #382d21;
   flex: 1 0 auto;
-  font-size: 1.2em;
-  max-height: 210px;
+  font-size: 1.25em;
+  line-height: 1.5;
+  max-height: 220px;
   overflow-y: auto;
   text-align: center;
   width: 100%;
+}
+
+#results-div p {
+  margin-bottom: 0.8rem;
+}
+
+#results-div p:last-child {
+  margin-bottom: 0;
 }
 
 .valid-p {
@@ -119,9 +128,10 @@ header {
 #clear-btn {
   background: var(--btn-bg);
   border: 3px outset #fff;
+  flex: 1 0 auto;
   font-size: 1.15em;
   max-width: 88px;
-  width: 100%
+  width: 100%;
 }
 
 #check-btn:hover,
